--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {
 
 .letra9{
     font-family: 'Raleway';
-    font-size: 22px;
+    font-size: 16px;
     color:#666;
 }
 
@@ -62,6 +62,14 @@ h1 {
   
   }
 
+  .leta10{
+    font-family: 'Montserrat';
+    font-size: 150px;
+    color: #070707; 
+    text-align: center;
+    }
+
+
 .temporizador {
   font-family: 'Staatliches', serif;
   font-size: 40px;
@@ -94,11 +102,11 @@ h1 {
     height: 260px;
 }
 
+.h3{
+	font-family: 'Montserrat', sans-serif;
+	font-weight:700;
+}
 
-.h6{
-    font-family: 'Montserrat' sans-serif;
-    ;font-size: 150px
-    }
 
 .chart h3{
     font-family: 'Montserrat', sans-serif;
@@ -141,3 +149,149 @@ h1 {
     */
 }
 
+.boton {
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+/* Cambia el color del botón cuando se coloca el cursor encima */
+.boton:hover {
+    background-color: #2980b9;
+}
+
+a.de-button, span.de-button, input[type=submit]{
+	display:inline-block; 	
+	margin:0 auto; 
+	margin-top:20px;
+	margin-right:10px; 
+	background-color:#666666 !important;
+	color:#FFF;
+	font-family: 'Montserrat', sans-serif;
+	font-weight:400;
+	border:solid 1px  ;
+	text-decoration:none
+}
+
+
+a.de-button.outline, span.de-button.outline, input[type=submit].outline{
+	border:solid 1px #666666;
+	color:#666666;
+}
+
+a.de-button:hover, input[type=submit]:hover{	
+	background-color:#666666;
+	border-color: #666666;
+	color:#FFF;
+	text-decoration:none;
+}
+
+/* 09.1.2 Outline Dark	 					 	 */
+/* ---------------------------------------------- */
+a.de-button.outline.dark-1, span.de-button.outline.dark-1, input[type=submit].outline.dark-1{
+	background-color:transparent; 
+	border:solid 1px #fff;
+	color:#fff;
+}
+
+a.de-button.outline.dark-1:hover, span.de-button.outline.dark-1:hover, input[type=submit].outline.dark-1:hover{
+	background-color:#666666;
+	border-color: #666666;
+	color:#FFF;
+	text-decoration:none;
+}
+
+/* 09.1.3 Light-1		 					 	 */
+/* ----------------------------------------------*/
+
+a.de-button.light-1, span.de-button.light-1, input[type=submit].light-1{	
+	background-color:#FFF;
+	color:#666666;
+	border:solid 1px #FFF;
+}
+
+a.de-button.outline.light-1, span.de-button.outline.light-1, input[type=submit].outline.light-1{
+	background-color:transparent; 
+	border:solid 1px #FFF;
+	color:#FFF;
+}
+
+a.de-button.light-1:hover, input[type=submit].light-1:hover{
+	background-color:#666666;
+	border-color: #666666;
+	color:#FFF;
+	text-decoration:none;
+}
+
+/* 09.1.4 Light-2			 					 */
+/* ----------------------------------------------*/
+a.de-button.light-2, span.de-button.light-2, input[type=submit].light-2{	
+	background-color:#FFF;
+	color:#666;
+	border:solid 1px #FFF;
+}
+
+a.de-button.outline.light-2, span.de-button.outline.light-2, input[type=submit].outline.light-2{
+	background-color:transparent; 
+	border:solid 1px #FFF;
+	color:#FFF;
+}
+
+a.de-button.light-2:hover, input[type=submit].light-2:hover{
+	background-color:#666666;
+	border-color: #666666;
+	color:#FFF;
+	text-decoration:none;
+}
+
+/* ----------------------------------------------*/
+/* 09.2 Size			 					 	 */
+/* ----------------------------------------------*/
+a.de-button.small, span.de-button.small, input[type=submit].small{
+	padding:8px 34px; 
+	font-size:12px; 
+}
+
+a.de-button.medium, span.de-button.medium, input[type=submit].medium{
+	padding:12px 40px; 
+	font-size:12px; 
+}
+
+a.de-button.large, span.de-button.large, input[type=submit].large{
+	padding:15px 60px; 
+	font-size:12px; 
+}
+
+/* ----------------------------------------------*/
+/* 09.3 Rounded			 					 	 */
+/* ----------------------------------------------*/
+a.de-button.small.rounded, span.de-button.small.rounded, input[type=submit].small.rounded{
+	border-radius:2px
+} 
+
+a.de-button.medium.rounded, span.de-button.medium.rounded, input[type=submit].medium.rounded{
+	border-radius:3px;
+}
+
+a.de-button.large.rounded, span.de-button.large.rounded, input[type=submit].large.rounded{
+	border-radius:4px;
+}
+
+.contenedor {
+    text-align: center; /* Centra el contenido horizontalmente */
+    padding: 20px;
+}
+
+.letra10{
+    font-family: 'Raleway';
+    font-size: 16px;
+    color:#ffffff;
+}
